io-hotmoka-examples/src/main/java/io/hotmoka/tests/errors/finalize/C.java
package io.hotmoka.tests.errors.finalize;

public class C {

	@Override
	protected void finalize() {} // illegal in Takamaka
}